small fish config update

--- a/private_dot_config/waypaper/config.ini
+++ b/private_dot_config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/.config/wallpaper
-wallpaper = ~/.config/wallpaper/wallhaven-l8v7kq.jpg
+wallpaper = ~/.config/wallpaper/blackwhole.png
 backend = hyprpaper
 monitors = All
 fill = fill
