add kmonad, other misc stuff

--- a/dot_ssh/config
+++ b/dot_ssh/config
@@ -1,8 +1,10 @@
 Host *
   NoHostAuthenticationForLocalhost yes
-#   StrictHostKeyChecking no
-#   GSSAPIAuthentication yes
-#   ForwardAgent yes
+#  StrictHostKeyChecking no
+#  GSSAPIAuthentication yes
+#  ForwardAgent yes
+#  HostKeyAlgorithms=+ssh-rsa
+#  PubkeyAcceptedKeyTypes +ssh-rsa
 
 Host dig*
 	ForwardX11 no
