--- a/private_dot_config/btrbk/btrbk.conf
+++ b/private_dot_config/btrbk/btrbk.conf
@@ -13,27 +13,27 @@ target_preserve            12h 7d 6w 12m 99y
 
 volume /mnt/mirror
  target /mnt/usb4tb/@backup/@btrbk/@ubuntu
- # target /mnt/usb2tb/@btrbk2tb/@ubuntu
+ target /mnt/usb2tb/@btrbk2tb/@ubuntu
  subvolume @ubuntu
 volume /mnt/mirror
  target /mnt/usb4tb/@backup/@btrbk/@arch
- # target /mnt/usb2tb/@btrbk2tb/@arch
+ target /mnt/usb2tb/@btrbk2tb/@arch
  subvolume @arch
 volume /mnt/mirror
  target /mnt/usb4tb/@backup/@btrbk/@home
- # target /mnt/usb2tb/@btrbk2tb/@home
+ target /mnt/usb2tb/@btrbk2tb/@home
  subvolume @home
 volume /mnt/stripe
  target /mnt/usb4tb/@backup/@btrbk/@data
- # target /mnt/usb2tb/@btrbk2tb/@data
+ target /mnt/usb2tb/@btrbk2tb/@data
  subvolume @data
 volume /mnt/stripe
  target /mnt/usb4tb/@backup/@btrbk/@containers
- # target /mnt/usb2tb/@btrbk2tb/@containers
+ target /mnt/usb2tb/@btrbk2tb/@containers
  subvolume @containers
 volume /mnt/stripe
  target /mnt/usb4tb/@backup/@btrbk/@scratch
- # target /mnt/usb2tb/@btrbk2tb/@scratch
+ target /mnt/usb2tb/@btrbk2tb/@scratch
  subvolume @scratch
 
 
