--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,7 +1,9 @@
 bind = SUPER CTRL, B ,exec, pypr toggle btop
 bind = SUPER CTRL, H ,exec, pypr toggle htop
 bind = SUPER CTRL, C ,exec, pypr toggle config
-bind = SUPER CTRL, G ,exec, pypr toggle term
+bind = SUPER CTRL, G ,exec, pypr toggle term1
+bind = SUPER CTRL, J ,exec, pypr toggle term2
+bind = SUPER CTRL, L ,exec, pypr toggle term3
 bind = SUPER CTRL, V ,exec, pypr toggle chatgpt
 bind = SUPER CTRL, K ,exec, pypr toggle mattermost
 bind = SUPER CTRL, M ,exec, pypr toggle mail
