--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -1,4 +1,5 @@
 monitor=,3840x2160@120,auto,1.5
+# monitor=,2560x1440@120,auto,1.5
 # monitor=,1920x1080@120,auto,1.5
 # xwayland {
   # force_zero_scaling = true
@@ -21,6 +22,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 dwindle {
     pseudotile = true
     preserve_split = true
+#    smart_split = true
 }
 master {
     # Commented out due to compatibility reasons
