--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -2,31 +2,31 @@
 source = ~/.cache/wal/colors-hyprland.conf
 
 decoration {
-    rounding = 20
+    rounding = 12
     blur {
-        enabled = trueBB
+        enabled = true
         size = 2
         passes = 1
         new_optimizations = on
         ignore_opacity = true
-        xray = false
+        xray = true
         blurls = waybar
     }
     active_opacity = 0.88
     inactive_opacity = 0.8
     fullscreen_opacity = 1
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 10
     shadow_render_power = 3
     col.shadow = 0x66000000
 }
 general {
-    gaps_in = 10
-    gaps_out = 20,20,0,20
+    gaps_in = 7
+    gaps_out = 14,14,0,14
     border_size = 1
     # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
-    col.active_border = rgb(ffffff)
+    col.active_border = rgb(888888)
     col.inactive_border = rgba(ffffff00)
     layout = dwindle
     resize_on_border = true
