--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -1,9 +1,17 @@
-exec-once = firefox
-exec-once = alacritty
+windowrulev2 = workspace 1, class:workspace1
+windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
+windowrulev2 = workspace 2, class:chezmoi
+windowrulev2 = workspace 3, title:(.*)(willutil)(.*)
+windowrulev2 = workspace 4, title:(.*)(rfdsym)(.*)
 
+exec-once = firefox --new-instance -P workspace1 --name workspace1
+exec-once = firefox --new-instance -P chezmoi --name chezmoi
+exec-once = alacritty --class workspace1
+exec-once = subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
+exec-once = subl --project /home/sheffler/willutil/ide/willutil.sublime-project
+exec-once = subl --project /home/sheffler/rfdsym/ide/whs/rf_diffusion.sublime-project
 exec-once = /usr/bin/pypr
 exec-once = pywalfox start
-exec-once = polychromatic-tray-applet
 exec-once = ~/.config/hypr/scripts/xdg.sh
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = dunst
@@ -13,9 +21,9 @@ exec-once = wl-paste --watch cliphist store
 exec-once = ags
 exec-once = hyprpaper
 exec-once = waybar
+exec-once = polychromatic-tray-applet
 exec-once = nm-applet
 exec-once = blueman-applet
 # exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
 exec-once = hyprctl setcursor Bibata-Modern-Ice 12
 exec-once = /home/sheffler/.local/bin/update_local_sys
-
