--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -2,7 +2,7 @@
 source = ~/.cache/wal/colors-hyprland.conf
 
 decoration {
-    rounding = 12
+    rounding = 5
     blur {
         enabled = true
         size = 2
@@ -22,8 +22,9 @@ decoration {
     col.shadow = 0x66000000
 }
 general {
-    gaps_in = 7
-    gaps_out = 14,14,0,14
+    gaps_in = 0
+    # gaps_out = 14,14,0,14
+    gaps_out = 0,0,0,0
     border_size = 1
     # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
     col.active_border = rgb(888888)
@@ -43,7 +44,7 @@ misc {
 
 
 animations {
-    enabled = true
+    enabled = false
     bezier = linear, 0, 0, 1, 1
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
     bezier = smoothOut, 0.5, 0, 0.99, 0.99
