--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -40,16 +40,16 @@ bind = SUPER CTRL, i, resizeactive, 0 64
 bind = SUPER CTRL, n, resizeactive, -64 0
 bind = SUPER CTRL, o, resizeactive, 64 0
 
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER CTRL, 1, movetoworkspace, 1
-bind = SUPER CTRL, 2, movetoworkspace, 2
-bind = SUPER CTRL, 3, movetoworkspace, 3
-bind = SUPER CTRL, 4, movetoworkspace, 4
-bind = SUPER CTRL, 5, movetoworkspace, 5
+bind = SUPER, a, workspace, 1
+bind = SUPER, r, workspace, 2
+bind = SUPER, s, workspace, 3
+bind = SUPER, t, workspace, 4
+bind = SUPER, d, workspace, 5
+bind = SUPER CTRL, a, movetoworkspace, 1
+bind = SUPER CTRL, r, movetoworkspace, 2
+bind = SUPER CTRL, s, movetoworkspace, 3
+bind = SUPER CTRL, t, movetoworkspace, 4
+bind = SUPER CTRL, d, movetoworkspace, 5
 
 bind = SUPER CTRL, q, exec, wlogout
 bind = SUPER, A, exec, $SCRIPTS/toggle-animations.sh
@@ -60,11 +60,11 @@ bind = SUPER, M, exec, ~/.config/waybar/toggle.sh
 # bind = SUPER, N, exec, $SCRIPTS/hyprshade.sh
 bind = SUPER, RETURN, exec, alacritty
 bind = SUPER, SEMICOLON, pseudo,
-bind = SUPER, T, togglefloating
+bind = SUPER, P, togglefloating
 bind = SUPER, V, exec, $SCRIPTS/cliphist.sh
 bind = SUPER, Q, killactive
-bind = SUPER, r, exec, rofi -show drun
-bind = SUPER, s, togglesplit,
+bind = SUPER, V, exec, rofi -show drun
+bind = SUPER, S, togglesplit,
 bind = SUPER, W, exec, waypaper --random
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizewindow
