--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,13 +1,14 @@
 bind = SUPER CTRL, B ,exec, pypr toggle btop
 bind = SUPER CTRL, H ,exec, pypr toggle htop
 bind = SUPER CTRL, C ,exec, pypr toggle config
-bind = SUPER CTRL, G ,exec, pypr toggle term1
-bind = SUPER CTRL, J ,exec, pypr toggle term2
-bind = SUPER CTRL, L ,exec, pypr toggle term3
+bind = SUPER CTRL, J ,exec, pypr toggle kmonad
+bind = SUPER CTRL, L ,exec, pypr toggle term1
+bind = SUPER CTRL, U ,exec, pypr toggle term2
+bind = SUPER CTRL, Y ,exec, pypr toggle term3
 bind = SUPER CTRL, V ,exec, pypr toggle chatgpt
 bind = SUPER CTRL, K ,exec, pypr toggle mattermost
 bind = SUPER CTRL, M ,exec, pypr toggle mail
-bind = SUPER CTRL, R ,exec, pypr toggle music
+bind = SUPER CTRL, H ,exec, pypr toggle music
 bind = SUPER CTRL, W ,exec, pypr toggle waypaper
 bind = SUPER CTRL, T ,exec, pypr toggle thunar
 
@@ -21,4 +22,5 @@ windowrule=float,class:(org.qutebrowser.qutebrowser)
 windowrule=float,class:(thunderbird)
 windowrule=float,class:(waypaper)
 windowrule=float,class:(thunar)
+windowrule=float,title:(.*)(config/kmonad/builtin.kbd)(.*)
 windowrulev2 = float, class:^(scratchpad)$
