--- a/private_dot_config/waypaper/config.ini
+++ b/private_dot_config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/.config/wallpaper
-wallpaper = ~/.config/wallpaper/salt-lakes-3840x2160_579697-mm-90.webp
+wallpaper = ~/.config/wallpaper/2veek29rath51.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
