kmonad config, split layers

--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -22,5 +22,5 @@ windowrule=float,class:(org.qutebrowser.qutebrowser)
 windowrule=float,class:(thunderbird)
 windowrule=float,class:(waypaper)
 windowrule=float,class:(thunar)
-windowrule=float,title:(.*)(config/kmonad/builtin.kbd)(.*)
+# windowrule=float,title:(.*)(config/kmonad/builtin.kbd)(.*)
 windowrulev2 = float, class:^(scratchpad)$
