switch to kanata

--- a/private_dot_config/hypr/hyprpaper.conf
+++ b/private_dot_config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 # Preload Wallpapers
-preload = /home/sheffler/.config/wallpaper/Fantasy-Autumn.png
+preload = /home/sheffler/.config/wallpaper/gmvw7g7rd0l41.jpg
 
 # Set Wallpapers
-wallpaper = ,/home/sheffler/.config/wallpaper/Fantasy-Autumn.png
+wallpaper = ,/home/sheffler/.config/wallpaper/gmvw7g7rd0l41.jpg
 
 # Disable Splash
 splash = false
