--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -8,9 +8,10 @@ bind = SUPER CTRL, Y ,exec, pypr toggle term3
 bind = SUPER CTRL, V ,exec, pypr toggle chatgpt
 bind = SUPER CTRL, K ,exec, pypr toggle mattermost
 bind = SUPER CTRL, M ,exec, pypr toggle mail
-bind = SUPER CTRL, H ,exec, pypr toggle music
+bind = SUPER CTRL, F ,exec, pypr toggle music
 bind = SUPER CTRL, W ,exec, pypr toggle waypaper
 bind = SUPER CTRL, T ,exec, pypr toggle thunar
+bind = SUPER CTRL, D ,exec, pypr toggle sublkeys
 
 bind = SUPER, space, exec, pypr hide btop && pypr hide htop && pypr hide config && pypr hide term && pypr hide chatgpt && pypr hide mattermost && pypr hide mail && pypr hide music && pypr hide waypaper && pypr hide thunar
 
@@ -22,5 +23,7 @@ windowrule=float,class:(org.qutebrowser.qutebrowser)
 windowrule=float,class:(thunderbird)
 windowrule=float,class:(waypaper)
 windowrule=float,class:(thunar)
-# windowrule=float,title:(.*)(config/kmonad/builtin.kbd)(.*)
 windowrulev2 = float, class:^(scratchpad)$
+windowrulev2=float,title:(.*)(\(Linux\)\.sublime-keymap)(.*)
+
+# +==
