--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -40,16 +40,26 @@ bind = SUPER CTRL, i, resizeactive, 0 64
 bind = SUPER CTRL, n, resizeactive, -64 0
 bind = SUPER CTRL, o, resizeactive, 64 0
 
-bind = SUPER, a, workspace, 1
-bind = SUPER, r, workspace, 2
-bind = SUPER, s, workspace, 3
-bind = SUPER, t, workspace, 4
-bind = SUPER, d, workspace, 5
-bind = SUPER CTRL, a, movetoworkspace, 1
-bind = SUPER CTRL, r, movetoworkspace, 2
-bind = SUPER CTRL, s, movetoworkspace, 3
-bind = SUPER CTRL, t, movetoworkspace, 4
-bind = SUPER CTRL, d, movetoworkspace, 5
+bind = SUPER , 1, workspace, 1
+bind = SUPER , 2, workspace, 2
+bind = SUPER , 3, workspace, 3
+bind = SUPER , 4, workspace, 4
+bind = SUPER , 5, workspace, 5
+bind = SUPER , 6, workspace, 6
+bind = SUPER , 7, workspace, 7
+bind = SUPER , 8, workspace, 8
+bind = SUPER , 9, workspace, 9
+bind = SUPER , 0, workspace, 10
+bind = SUPER ALT, 1, movetoworkspace, 1
+bind = SUPER ALT, 2, movetoworkspace, 2
+bind = SUPER ALT, 3, movetoworkspace, 3
+bind = SUPER ALT, 4, movetoworkspace, 4
+bind = SUPER ALT, 5, movetoworkspace, 5
+bind = SUPER ALT, 6, movetoworkspace, 6
+bind = SUPER ALT, 7, movetoworkspace, 7
+bind = SUPER ALT, 8, movetoworkspace, 8
+bind = SUPER ALT, 9, movetoworkspace, 9
+bind = SUPER ALT, 0, movetoworkspace, 10
 
 bind = SUPER CTRL, q, exec, wlogout
 bind = SUPER, A, exec, $SCRIPTS/toggle-animations.sh
