--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -1,3 +1,13 @@
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+cursor {
+    no_hardware_cursors = true
+}
+
+
 monitor=,3840x2160@120,auto,1.5
 # monitor=,2560x1440@120,auto,1.5
 # monitor=,1920x1080@120,auto,1.5
@@ -5,6 +15,10 @@ monitor=,3840x2160@120,auto,1.5
   # force_zero_scaling = true
 # }
 # env = GDK_SCALE,2
+
+windowrulev2=float,title:(.*)(\(Linux\)\.sublime-keymap)(.*)
+windowrulev2=float,title:(.*)(Sign In)(.*)
+# windowrulev2=float,title:(.*)(PyMOL)(.*)
 
 source = ~/.config/hypr/sheffler_autostart.conf
 source = ~/.config/hypr/sheffler_input.conf
