--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -3,6 +3,7 @@ windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
 windowrulev2 = workspace 2, class:chezmoi
 windowrulev2 = workspace 3, title:(.*)(willutil)(.*)
 windowrulev2 = workspace 4, title:(.*)(rfdsym)(.*)
+windowrulev2 = workspace 5, title:(.*)({ipd/ipd)(.*)
 
 exec-once = firefox --new-instance -P workspace1 --name workspace1
 exec-once = firefox --new-instance -P chezmoi --name chezmoi
