--- a/private_dot_config/hypr/sheffler_input.conf
+++ b/private_dot_config/hypr/sheffler_input.conf
@@ -1,9 +1,8 @@
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_variant = colemak
-    kb_model = pc105
-    kb_options = ctrl:nocaps
+#    kb_variant = colemak
+    kb_model = pc10
     kb_rules =
     repeat_rate = 40
     repeat_delay = 200
