--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -50,16 +50,16 @@ bind = SUPER , 7, workspace, 7
 bind = SUPER , 8, workspace, 8
 bind = SUPER , 9, workspace, 9
 bind = SUPER , 0, workspace, 10
-bind = SUPER ALT, 1, movetoworkspace, 1
-bind = SUPER ALT, 2, movetoworkspace, 2
-bind = SUPER ALT, 3, movetoworkspace, 3
-bind = SUPER ALT, 4, movetoworkspace, 4
-bind = SUPER ALT, 5, movetoworkspace, 5
-bind = SUPER ALT, 6, movetoworkspace, 6
-bind = SUPER ALT, 7, movetoworkspace, 7
-bind = SUPER ALT, 8, movetoworkspace, 8
-bind = SUPER ALT, 9, movetoworkspace, 9
-bind = SUPER ALT, 0, movetoworkspace, 10
+bind = SUPER CTRL, 1, movetoworkspace, 1
+bind = SUPER CTRL, 2, movetoworkspace, 2
+bind = SUPER CTRL, 3, movetoworkspace, 3
+bind = SUPER CTRL, 4, movetoworkspace, 4
+bind = SUPER CTRL, 5, movetoworkspace, 5
+bind = SUPER CTRL, 6, movetoworkspace, 6
+bind = SUPER CTRL, 7, movetoworkspace, 7
+bind = SUPER CTRL, 8, movetoworkspace, 8
+bind = SUPER CTRL, 9, movetoworkspace, 9
+bind = SUPER CTRL, 0, movetoworkspace, 10
 
 bind = SUPER CTRL, q, exec, wlogout
 bind = SUPER, A, exec, $SCRIPTS/toggle-animations.sh
@@ -73,7 +73,7 @@ bind = SUPER, SEMICOLON, pseudo,
 bind = SUPER, P, togglefloating
 bind = SUPER, V, exec, $SCRIPTS/cliphist.sh
 bind = SUPER, Q, killactive
-bind = SUPER, V, exec, rofi -show drun
+bind = SUPER, R, exec, rofi -show drun
 bind = SUPER, S, togglesplit,
 bind = SUPER, W, exec, waypaper --random
 bindm = SUPER, mouse:272, movewindow
