--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,21 +1,32 @@
-bind = SUPER CTRL, B ,exec, pypr toggle btop
-bind = SUPER CTRL, H ,exec, pypr toggle htop
-bind = SUPER CTRL, C ,exec, pypr toggle config
-bind = SUPER CTRL, J ,exec, pypr toggle kmonad
-bind = SUPER CTRL, L ,exec, pypr toggle term1
-bind = SUPER CTRL, U ,exec, pypr toggle term2
-bind = SUPER CTRL, Y ,exec, pypr toggle term3
-bind = SUPER CTRL, V ,exec, pypr toggle chatgpt
-bind = SUPER CTRL, K ,exec, pypr toggle mattermost
-bind = SUPER CTRL, M ,exec, pypr toggle mail
-bind = SUPER CTRL, F ,exec, pypr toggle music
-bind = SUPER CTRL, W ,exec, pypr toggle waypaper
-bind = SUPER CTRL, T ,exec, pypr toggle thunar
-bind = SUPER CTRL, D ,exec, pypr toggle sublkeys
 
-bind = SUPER, space, exec, pypr hide btop && pypr hide htop && pypr hide config && pypr hide term && pypr hide chatgpt && pypr hide mattermost && pypr hide mail && pypr hide music && pypr hide waypaper && pypr hide thunar
+#q w f p g
+bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
+bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
+bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
+bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
+bind = SUPER ALT CTRL SHIFT, a ,exec, pypr toggle term5
+bind = SUPER ALT CTRL SHIFT, r ,exec, pypr toggle term6
+bind = SUPER ALT CTRL SHIFT, s ,exec, pypr toggle term7
+bind = SUPER ALT CTRL SHIFT, t ,exec, pypr toggle term8
+bind = ALT CTRL SHIFT, d ,exec, pypr toggle termbig
 
-# bind = SUPER ALT, W, exec, $SCRIPTS/wallpaper<p></p>-automation.sh
+# zx
+bind = ALT CTRL SHIFT, c ,exec, pypr toggle htop
+bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
+
+# jluy
+bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
+bind = ALT CTRL SHIFT, n ,exec, pypr toggle mail
+bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
+bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
+bind = ALT CTRL SHIFT, o ,exec, pypr toggle waypaper
+# m
+# bind = ALT CTRL SHIFT, l ,exec, pypr toggle config
+# bind = ALT CTRL SHIFT, y ,exec, pypr toggle thunar
+# bind = ALT CTRL SHIFT, m ,exec, pypr toggle sublkeys
+
+
+# bind = ALT, W, exec, $SCRIPTS/wallpaper<p></p>-automation.sh
 windowrule=float,class:(google-chrome)
 windowrule=float,class:(Mattermost)
 windowrule=float,class:(Spotify)
@@ -24,6 +35,5 @@ windowrule=float,class:(thunderbird)
 windowrule=float,class:(waypaper)
 windowrule=float,class:(thunar)
 windowrulev2 = float, class:^(scratchpad)$
-windowrulev2=float,title:(.*)(\(Linux\)\.sublime-keymap)(.*)
 
 # +==
