--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -8,6 +8,9 @@ cursor {
 }
 
 
+# monitor=,3840x2160@120,auto,2
+# monitor=,3840x2160@120,auto,1.75
+# monitor=,3840x2160@120,auto,1.66666
 monitor=,3840x2160@120,auto,1.5
 # monitor=,2560x1440@120,auto,1.5
 # monitor=,1920x1080@120,auto,1.5
@@ -16,10 +19,7 @@ monitor=,3840x2160@120,auto,1.5
 # }
 # env = GDK_SCALE,2
 
-windowrulev2=float,title:(.*)(\(Linux\)\.sublime-keymap)(.*)
-windowrulev2=float,title:(.*)(Sign In)(.*)
-# windowrulev2=float,title:(.*)(PyMOL)(.*)
-
+source = ~/.config/hypr/sheffler_windowrules.conf
 source = ~/.config/hypr/sheffler_autostart.conf
 source = ~/.config/hypr/sheffler_input.conf
 source = ~/.config/hypr/sheffler_keybinds.conf
