--- a/private_dot_config/hypr/sheffler_deco.conf
+++ b/private_dot_config/hypr/sheffler_deco.conf
@@ -1,18 +1,18 @@
 source = ~/.cache/wal/colors-hyprland.conf
 
 decoration {
-    rounding = 5
+    rounding = 4
     blur {
         enabled = true
         size = 2
         passes = 1
         new_optimizations = on
         ignore_opacity = true
-        xray = true
+        xray = false
         blurls = waybar
     }
-    active_opacity = 0.88
-    inactive_opacity = 0.8
+    active_opacity = 1
+    inactive_opacity = 0.9
     fullscreen_opacity = 1
 
     drop_shadow = false
@@ -24,7 +24,7 @@ general {
     gaps_in = 0
     # gaps_out = 14,14,0,14
     gaps_out = 0,0,0,0
-    border_size = 1
+    border_size = 2
     # col.active_border = rgb(ff0000) rgb(00ff00) rgb(0000ff) 29deg
     col.active_border = rgb(888888)
     col.inactive_border = rgba(ffffff00)
@@ -33,7 +33,7 @@ general {
 }
 
 cursor {
-    env = HYPRCURSOR_SIZE,24
+    env = HYPRCURSOR_SIZE,48
     no_hardware_cursors = true
 }
 misc {
