--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -1,5 +1,7 @@
 $SCRIPTS = ~/.config/hypr/scripts
 
+bind = SHIFT CTRL ALT, C, exec, grim -g "$(slurp -d)" - | wl-copy
+
 # bind = , XF86AudioPause, exec, playerctl pause
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -25,20 +27,19 @@ bind = SUPER, F, exec, pypr expose
 workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
 
 bind = ALT, space, exec, pypr layout_center toggle
-bind = alt, tab, exec, pypr layout_center next
-bind = CTRL, tab, exec, pypr layout_center next
-bind = SUPER, e, exec, pypr layout_center prev2
-bind = SUPER, i, exec, pypr layout_center next2
-bind = SUPER, n, exec, pypr layout_center prev
-bind = SUPER, o, exec, pypr layout_center next
-bind = SUPER SHIFT, e, movewindow, u
-bind = SUPER SHIFT, i, movewindow, d
-bind = SUPER SHIFT, n, movewindow, l
-bind = SUPER SHIFT, o, movewindow, r
-bind = SUPER CTRL, e, resizeactive, 0 -64
-bind = SUPER CTRL, i, resizeactive, 0 64
-bind = SUPER CTRL, n, resizeactive, -64 0
-bind = SUPER CTRL, o, resizeactive, 64 0
+bind = ALT CTRL SHIFT, equal, exec, pypr layout_center next
+bind = SUPER, up, exec, pypr layout_center prev2
+bind = SUPER, down, exec, pypr layout_center next2
+bind = SUPER, left, exec, pypr layout_center prev
+bind = SUPER, right, exec, pypr layout_center next
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, down, movewindow, d
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER CTRL, up, resizeactive, 0 -32
+bind = SUPER CTRL, down, resizeactive, 0 32
+bind = SUPER CTRL, left, resizeactive, -32 0
+bind = SUPER CTRL, right, resizeactive, 32 0
 
 bind = SUPER , 1, workspace, 1
 bind = SUPER , 2, workspace, 2
