--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,5 +1,7 @@
 
-#q w f p g
+# q w
+# bind = ALT CTRL SHIFT, f ,exec, pypr toggle thunar
+# p g
 bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
 bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
 bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
@@ -8,21 +10,19 @@ bind = SUPER ALT CTRL SHIFT, a ,exec, pypr toggle term5
 bind = SUPER ALT CTRL SHIFT, r ,exec, pypr toggle term6
 bind = SUPER ALT CTRL SHIFT, s ,exec, pypr toggle term7
 bind = SUPER ALT CTRL SHIFT, t ,exec, pypr toggle term8
-bind = ALT CTRL SHIFT, d ,exec, pypr toggle termbig
 
 # zx
-bind = ALT CTRL SHIFT, c ,exec, pypr toggle htop
-bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
+# bind = ALT CTRL SHIFT, c ,exec, pypr toggle htop
+# bind = ALT CTRL SHIFT, v ,exec, pypr toggle btop
 
 # jluy
-bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
-bind = ALT CTRL SHIFT, n ,exec, pypr toggle mail
-bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
-bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
-bind = ALT CTRL SHIFT, o ,exec, pypr toggle waypaper
+# bind = ALT CTRL SHIFT, h ,exec, pypr toggle chatgpt
+# bind = ALT CTRL SHIFT, n ,exec, pypr toggle mail
+# bind = ALT CTRL SHIFT, e ,exec, pypr toggle mattermost
+# bind = ALT CTRL SHIFT, i ,exec, pypr toggle music
+# bind = ALT CTRL SHIFT, o ,exec, pypr toggle waypaper
 # m
 # bind = ALT CTRL SHIFT, l ,exec, pypr toggle config
-# bind = ALT CTRL SHIFT, y ,exec, pypr toggle thunar
 # bind = ALT CTRL SHIFT, m ,exec, pypr toggle sublkeys
 
 
