--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -1,25 +1,19 @@
-windowrulev2 = workspace 1, class:workspace1
-windowrulev2 = workspace 2, title:(.*)(chezmoi)(.*)
-windowrulev2 = workspace 2, class:chezmoi
-windowrulev2 = workspace 3, title:(.*)(willutil)(.*)
-windowrulev2 = workspace 4, title:(.*)(rfdsym)(.*)
-windowrulev2 = workspace 5, title:(.*)({ipd/ipd)(.*)
-
 exec-once = firefox --new-instance -P workspace1 --name workspace1
 exec-once = firefox --new-instance -P chezmoi --name chezmoi
 exec-once = alacritty --class workspace1
 exec-once = subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
-exec-once = subl --project /home/sheffler/willutil/ide/willutil.sublime-project
-exec-once = subl --project /home/sheffler/rfdsym/ide/whs/rf_diffusion.sublime-project
-exec-once = /usr/bin/pypr
-exec-once = pywalfox start
-exec-once = ~/.config/hypr/scripts/xdg.sh
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
+# exec-once = subl --project /home/sheffler/rfdsym/ide/whs/rf_diffusion.sublime-project
+exec-once = /home/sheffler/sw/MambaForge/bin/pypr
+exec-once = /home/sheffler/sw/MambaForge/bin/pywalfox start
+exec-once = /home/sheffler/.config/hypr/scripts/xdg.sh
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/polkit-1/polkit-agent-helper-1
 exec-once = dunst
-exec-once = ~/.config/hypr/scripts/gtk.sh
+exec-once = /home/sheffler/.config/hypr/scripts/gtk.sh
 # exec-once = hypridle 
-exec-once = wl-paste --watch cliphist store
-exec-once = ags
+# exec-once = wl-paste --watch cliphist store
+# exec-once = agse
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = polychromatic-tray-applet
