--- a/private_dot_config/hypr/sheffler_input.conf
+++ b/private_dot_config/hypr/sheffler_input.conf
@@ -1,14 +1,27 @@
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+
+# $LAPTOP_KB_ENABLED = true
+$LAPTOP_KB_ENABLED = false
+device {
+  name = razer-razer-blade
+  enabled = $LAPTOP_KB_ENABLED
+}
+device {
+  name = razer-razer-blade-1
+  enabled = $LAPTOP_KB_ENABLED
+}
+
 input {
     kb_layout = us
 #    kb_variant = colemak
+    kb_options=ctrl:nocaps
     kb_model = pc10
     kb_rules =
-    repeat_rate = 40
-    repeat_delay = 200
+    repeat_rate = 120
+    repeat_delay = 300
     follow_mouse = 1
     touchpad {
-        natural_scroll = true
+        natural_scroll = false
         disable_while_typing = true
         tap-to-click = false
     }
