--- a/private_dot_config/waypaper/config.ini
+++ b/private_dot_config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = ~/.config/wallpaper
-wallpaper = ~/.config/wallpaper/highlands-grid.jpg
+wallpaper = ~/.config/wallpaper/wallhaven-pkz98e.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
@@ -16,4 +16,6 @@ swww_transition_type = any
 swww_transition_step = 90
 swww_transition_angle = 0
 swww_transition_duration = 2
+swww_transition_fps = 60
+use_xdg_state = False
 
