add nushell and atuin

--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -4,7 +4,7 @@ exec-once = alacritty --class workspace1
 exec-once = subl --project /home/sheffler/.local/share/chezmoi/ide/chezmoi.sublime-project
 exec-once = subl --project /home/sheffler/mlb/ide/whs/mlb.sublime-project
 # exec-once = subl --project /home/sheffler/rfdsym/ide/whs/rf_diffusion.sublime-project
-exec-once = /home/sheffler/sw/MambaForge/bin/pypr
+exec-once = /home/sheffler/sw/MambaForge/bin/pypr --debug /home/sheffler/pypr.log
 exec-once = /home/sheffler/sw/MambaForge/bin/pywalfox start
 exec-once = /home/sheffler/.config/hypr/scripts/xdg.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -13,7 +13,7 @@ exec-once = dunst
 exec-once = /home/sheffler/.config/hypr/scripts/gtk.sh
 # exec-once = hypridle 
 # exec-once = wl-paste --watch cliphist store
-# exec-once = agse
+# exec-once = ags
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = polychromatic-tray-applet
