--- a/private_dot_config/hypr/sheffler_keybinds.conf
+++ b/private_dot_config/hypr/sheffler_keybinds.conf
@@ -26,20 +26,36 @@ bind = SUPER, H, exec, hyprctl setprop active opaque toggle
 bind = SUPER, F, exec, pypr expose
 workspace = special:exposed,gapsout:40,gapsin:20,bordersize:5,border:true,shadow:false
 
-bind = ALT, space, exec, pypr layout_center toggle
-bind = ALT CTRL SHIFT, equal, exec, pypr layout_center next
-bind = SUPER, up, exec, pypr layout_center prev2
-bind = SUPER, down, exec, pypr layout_center next2
-bind = SUPER, left, exec, pypr layout_center prev
-bind = SUPER, right, exec, pypr layout_center next
-bind = SUPER SHIFT, up, movewindow, u
-bind = SUPER SHIFT, down, movewindow, d
-bind = SUPER SHIFT, left, movewindow, l
-bind = SUPER SHIFT, right, movewindow, r
+# bind = ALT, space, exec, pypr layout_center toggle
+bind = ALT CTRL SHIFT, equal, cyclenext
+# bind = SUPER, up, exec, pypr layout_center prev2
+# bind = SUPER, down, exec, pypr layout_center next2
+# bind = SUPER, left, exec, pypr layout_center prev
+# bind = SUPER, right, exec, pypr layout_center next
+bind = SUPER, up, movefocus, u
+bind = SUPER, down, movefocus, d
+bind = SUPER, left, movefocus, l
+bind = SUPER, right, movefocus, r
+bind = SUPER, page_up, movewindow, u
+bind = SUPER, page_down, movewindow, d
+bind = SUPER, home, movewindow, l
+bind = SUPER, end, movewindow, r
 bind = SUPER CTRL, up, resizeactive, 0 -32
 bind = SUPER CTRL, down, resizeactive, 0 32
 bind = SUPER CTRL, left, resizeactive, -32 0
 bind = SUPER CTRL, right, resizeactive, 32 0
+bind = SUPER, e, movefocus, u
+bind = SUPER, i, movefocus, d
+bind = SUPER, n, movefocus, l
+bind = SUPER, o, movefocus, r
+bind = SUPER SHIFT, e, movewindow, u
+bind = SUPER SHIFT, i, movewindow, d
+bind = SUPER SHIFT, n, movewindow, l
+bind = SUPER SHIFT, o, movewindow, r
+bind = SUPER CTRL, e, resizeactive, 0 -32
+bind = SUPER CTRL, i, resizeactive, 0 32
+bind = SUPER CTRL, n, resizeactive, -32 0
+bind = SUPER CTRL, o, resizeactive, 32 0
 
 bind = SUPER , 1, workspace, 1
 bind = SUPER , 2, workspace, 2
