--- a/private_dot_config/hypr/sheffler_scratch.conf
+++ b/private_dot_config/hypr/sheffler_scratch.conf
@@ -1,15 +1,14 @@
-
 # q w
 # bind = ALT CTRL SHIFT, f ,exec, pypr toggle thunar
 # p g
-bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
-bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
-bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
-bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
-bind = SUPER ALT CTRL SHIFT, a ,exec, pypr toggle term5
-bind = SUPER ALT CTRL SHIFT, r ,exec, pypr toggle term6
-bind = SUPER ALT CTRL SHIFT, s ,exec, pypr toggle term7
-bind = SUPER ALT CTRL SHIFT, t ,exec, pypr toggle term8
+# bind = ALT CTRL SHIFT, a ,exec, pypr toggle term1
+# bind = ALT CTRL SHIFT, r ,exec, pypr toggle term2
+# bind = ALT CTRL SHIFT, s ,exec, pypr toggle term3
+# bind = ALT CTRL SHIFT, t ,exec, pypr toggle term4
+# bind = SUPER ALT CTRL SHIFT, a ,exec, pypr toggle term5
+# bind = SUPER ALT CTRL SHIFT, r ,exec, pypr toggle term6
+# bind = SUPER ALT CTRL SHIFT, s ,exec, pypr toggle term7
+# bind = SUPER ALT CTRL SHIFT, t ,exec, pypr toggle term8
 
 # zx
 # bind = ALT CTRL SHIFT, c ,exec, pypr toggle htop
@@ -35,5 +34,6 @@ windowrule=float,class:(thunderbird)
 windowrule=float,class:(waypaper)
 windowrule=float,class:(thunar)
 windowrulev2 = float, class:^(scratchpad)$
+windowrulev2 = float, class:^(kitty-dropterm)$
 
 # +==
