--- a/private_dot_config/hypr/pyprland.toml
+++ b/private_dot_config/hypr/pyprland.toml
@@ -1,86 +1,60 @@
 [pyprland]
-
 plugins = [
-   # "scratchpads",
-   "layout_center",
+   "scratchpads",
+   # "layout_center",
    # "expose",
    # "system_notifier",
 ]
 
-# [system_notifier.sources]
-# command = "sudo journalctl -fx"
-# parser = "journal"
-# [system_notifier.parsers.journal]
-# pattern = "([a-z0-9]+): Link UP$"
-# filter = "s/.*\[\d+\]: ([a-z0-9]+): Link.*/\1 is active/"
-# color= "#00aa00"
-# [system_notifier.parsers.journal]
-# pattern = "([a-z0-9]+): Link DOWN$"
-# filter = "s/.*\[\d+\]: ([a-z0-9]+): Link.*/\1 is inactive/"
-# color= "#ff8800"
-# [system_notifier.parsers.journal]
-# pattern = "Process \d+ \(.*\) of .* dumped core."
-# filter = "s/.*Process \d+ \((.*)\) of .* dumped core./\1 dumped core/"
-# color= "#aa0000"
-# [system_notifier.parsers.journal]
-# pattern = "usb \d+-[0-9.]+: Product: "
-# filter = "s/.*usb \d+-[0-9.]+: Product: (.*)/USB plugged: \1/"
+[scratchpads.term]
+animation = "fromTop"
+command = "kitty --class kitty-dropterm"
+class = "kitty-dropterm"
+size = "75% 60%"
+max_size = "1920px 100%"
+margin = 50
 
-# [expose]
-# include_special = false
-
-[layout_center]
-# margin = 60
-# offset = [30, 30]
-size = "60% 60%"
-position = "20% 20%"
-next = "movefocus r"
-prev = "movefocus l"
-next2 = "movefocus d"
-prev2 = "movefocus u"
-
-# [scratchpads.config]
-# # command = "alacritty --class scratchpad"
-# command = "alacritty --class scratchpad -e nvim /home/sheffler/.local/share/chezmoi"
-# lazy = true
-# class = "scratchpad"
-# unfocus = "hide"
-# size = "90% 90%"
-# position = "5% 5%"
 
 # [scratchpads.term1]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "3% 5%"
 # [scratchpads.term2]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "3% 15%"
 # [scratchpads.term3]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "7% 5%"
 # [scratchpads.term4]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "7% 15%"
 # [scratchpads.term5]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "3% 5%"
 # [scratchpads.term6]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "3% 15%"
 # [scratchpads.term7]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "7% 5%"
 # [scratchpads.term8]
 # command = "alacritty --class scratchpad"
+# class = "scratchpad"
 # size = "90% 70%"
 # position = "7% 15%"
-
 # [scratchpads.sublkeys]
 # command = "subl /home/sheffler/.config/sublime-text-3/Packages/User/ide/sublkeys.sublime-project"
 # class = "scratchpad"
@@ -88,21 +62,16 @@ prev2 = "movefocus u"
 # unfocus = "hide"
 # size = "90% 90%"
 # position = "5% 5%"
-#
 # [scratchpads.btop]
 # command = "alacritty --class scratchpad -e btop"
-# lazy = true
-# unfocus = "hide"
+# class = "scratchpad"
 # size = "90% 90%"
 # position = "5% 5%"
-#
 # [scratchpads.htop]
 # command = "alacritty --class scratchpad -e htop"
-# lazy = true
-# unfocus = "hide"
+# class = "scratchpad"
 # size = "90% 90%"
 # position = "5% 5%"
-#
 # [scratchpads.chatgpt]
 # command = "qutebrowser -r chatgpt"
 # class = "org.qutebrowser.qutebrowser"
@@ -126,7 +95,7 @@ prev2 = "movefocus u"
 # unfocus = "hide"
 # size = "90% 90%"
 # position = "5% 5%"
-#
+
 # [scratchpads.mattermost]
 # command = "mattermost-desktop"
 # class = "Mattermost"
@@ -134,7 +103,7 @@ prev2 = "movefocus u"
 # unfocus = "hide"
 # size = "90% 90%"
 # position = "5% 5%"
-#
+
 # # [scratchpads.waypaper]
 # # command = "waypaper"
 # # class = "waypaper"
@@ -151,3 +120,32 @@ prev2 = "movefocus u"
 # size = "90% 90%"
 # position = "5% 5%"
 
+# [system_notifier.sources]
+# command = "sudo journalctl -fx"
+# parser = "journal"
+# [system_notifier.parsers.journal]
+# pattern = "([a-z0-9]+): Link UP$"
+# filter = "s/.*\[\d+\]: ([a-z0-9]+): Link.*/\1 is active/"
+# color= "#00aa00"
+# [system_notifier.parsers.journal]
+# pattern = "([a-z0-9]+): Link DOWN$"
+# filter = "s/.*\[\d+\]: ([a-z0-9]+): Link.*/\1 is inactive/"
+# color= "#ff8800"
+# [system_notifier.parsers.journal]
+# pattern = "Process \d+ \(.*\) of .* dumped core."
+# filter = "s/.*Process \d+ \((.*)\) of .* dumped core./\1 dumped core/"
+# color= "#aa0000"
+# [system_notifier.parsers.journal]
+# pattern = "usb \d+-[0-9.]+: Product: "
+# filter = "s/.*usb \d+-[0-9.]+: Product: (.*)/USB plugged: \1/"
+# [expose]
+# include_special = false
+# [layout_center]
+# # margin = 60
+# # offset = [30, 30]
+# size = "60% 60%"
+# position = "20% 20%"
+# next = "movefocus r"
+# prev = "movefocus l"
+# next2 = "movefocus d"
+# prev2 = "movefocus u"
