small update, tried out nushell

--- a/private_dot_config/hypr/sheffler_autostart.conf
+++ b/private_dot_config/hypr/sheffler_autostart.conf
@@ -1,3 +1,4 @@
+exec-once = /home/sheffler/sw/MambaForge/bin/atuin daemon
 exec-once = firefox --new-instance -P workspace1 --name workspace1
 exec-once = firefox --new-instance -P chezmoi --name chezmoi
 exec-once = alacritty --class workspace1
