--- a/private_dot_config/hypr/hyprland.conf
+++ b/private_dot_config/hypr/hyprland.conf
@@ -7,18 +7,7 @@ cursor {
     no_hardware_cursors = true
 }
 
-
-# monitor=,3840x2160@120,auto,2
-# monitor=,3840x2160@120,auto,1.75
-# monitor=,3840x2160@120,auto,1.66666
-monitor=,3840x2160@120,auto,1.6
-# monitor=,2560x1440@120,auto,1.5
-# monitor=,1920x1080@120,auto,1.5
-# xwayland {
-  # force_zero_scaling = true
-# }
-# env = GDK_SCALE,2
-
+source = ~/.config/hypr/hyprlocal.conf
 source = ~/.config/hypr/sheffler_windowrules.conf
 source = ~/.config/hypr/sheffler_autostart.conf
 source = ~/.config/hypr/sheffler_input.conf
